Fixed Overflow:Scroll
Scrollbar bug fix

--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -48,7 +48,7 @@ main {
   position: fixed;
   background-color: var(--bg-primary);
   transition: width 600ms ease;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 .navbar-nav {
@@ -164,7 +164,7 @@ main {
 }
 
 /* Large screens */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 800px) {
   .navbar {
     top: 0;
     width: 5rem;
